Latest and last commit for evaluation

--- a/CodeIgniter/docker/custom_php.ini
+++ b/CodeIgniter/docker/custom_php.ini
@@ -2,3 +2,8 @@
 SMTP = mailhog
 smtp_port = 1025
 sendmail_path = "/usr/sbin/sendmail -t -i"
+
+[apcu function]
+extension=apcu
+apc.enabled=1
+apc.enable_cli=1
