--- a/CodeIgniter/docker/docker-compose.yaml
+++ b/CodeIgniter/docker/docker-compose.yaml
@@ -7,8 +7,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf  # Load your custom nginx config
       - ../public:/public  # Mount the public directory correctly
       - ../app:/app  # Mount the app directory
-    depends_on:
-      - app  # Ensure webserver starts after the app
+      - ../vendor:/vendor  # Mount the vendor directory for autoload.php
 
   app:
     build:
@@ -17,6 +16,7 @@ services:
     volumes:
       - ../app:/app  # Mount the app directory
       - ../public:/public  # Mount the public directory correctly
+      - ../vendor:/vendor  # Mount the vendor directory for autoload.php
     expose:
       - "9000"
     depends_on:
